# webhook

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  main.go  nomad.hcl  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  deploy.yml  docker.yml  helm.yml  lint.yml  publish.yml  test.yml
api/: index.go
cache/: memory.go  memory_test.go  redis.go  redis_test.go
client/: client.go  discord.go
cmd/gohook/: main.go
cmd/webhook/: main.go
codec/: bool.go  codec.go  string.go
config/: config.go
debouncer/: debouncer.go
events/: base.go  checkRun.go  fork.go  issueComment.go  issues.go  parser.go  pullRequest.go  push.go  release.go  star.go  workflowRun.go  workflow_run.go
helm/: .helmignore  Chart.yaml  values.yaml
helm/templates/: NOTES.txt  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  serviceaccount.yaml
internal/cache/: cache.go  memory.go  memory_test.go  redis.go  redis_test.go
internal/client/: client.go  discord.go
internal/codec/: bool.go  bool_test.go  string_test.go
internal/config/: config.go
internal/context/: context.go
internal/db/: database.go
internal/debouncer/: debouncer.go
internal/dtos/: webhook.go
internal/events/: checkRun.go  fork.go  issueComment.go  issues.go  parser.go  public.go  pullRequest.go  push.go  release.go  repository.go  star.go  workflowRun.go
internal/logger/: logger.go
internal/middlewares/: auth.go
internal/models/: token.go  webhook.go
internal/parser/: parser.go
internal/server/: server.go  webhook.go
internal/utils/: http.go  (+1 more)
jail/: jail.go
logger/: logger.go
parser/: fork.go  parser.go  push.go  release.go  star.go  workflowRun.go
proxy/: proxy.go
server/: handler.go  health.go  server.go  webhook.go
src/: client.rs  errors.rs  main.rs  parser.rs  server.rs  structs.rs
structs/: commit.go  credentials.go  forkee.go  release.go  repository.go  user.go  webhook.go  workflow.go  workflowRun.go
(+38 files in other folders)
