[package]
name = "webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
log = "0.4"
env_logger = "0.11.8"
