[package]
name = "webhook"
version = "0.1.0"
edition = "2024"

[profile.dev]
split-debuginfo = "unpacked" # macOS only

[profile.dev.build-override]
opt-level = 3

[profile.release]
strip = "symbols"
opt-level = 3

[dependencies]
actix-web = { version = "4.11.0", features = ["macros"], default-features = false }
reqwest = { version = "0.12.20", features = ["rustls-tls", "http2", "json"], default-features = false }
tokio = "1.46.1"
serde = { version = "1.0.219", features = ["serde_derive"], default-features = false }
serde_json = "1.0.140"
regex = "1.11.1"
log = "0.4.27"
env_logger = { version = "0.11.8", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
subtle = "2.6.1"
